<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/keyline"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_transaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_price"
                android:textAppearance="@style/TextAppearance.Secondary" />

            <TextView
                android:id="@+id/currency_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_small"
                android:textAppearance="@style/TextAppearance.Primary"
                tools:text="1,000,000 KRW" />

            <TextView
                android:id="@+id/currency_change_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_spacing"
                android:textAppearance="@style/TextAppearance.Secondary"
                tools:text="1,000 KRW (0.00%)" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline"
                android:text="@string/current_coin_count"
                android:textAppearance="@style/TextAppearance.Secondary" />

            <TextView
                android:id="@+id/coin_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_small"
                android:text="0"
                android:textAppearance="@style/TextAppearance.Primary"
                tools:text="0.001" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyline_small"
            android:background="@color/dividerColor" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_budget_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_budget"
                android:textAppearance="@style/TextAppearance.Secondary" />

            <TextView
                android:id="@+id/current_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_small"
                android:textAppearance="@style/TextAppearance.Primary"
                app:layout_constraintTop_toBottomOf="@id/current_budget_desc"
                tools:text="1,000,000 KRW" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/keyline_small"
                android:text="@string/available_coin_count"
                android:textAppearance="@style/TextAppearance.Secondary"
                app:layout_constraintBottom_toTopOf="@id/available_coin_count" />

            <TextView
                android:id="@+id/available_coin_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.Primary"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="0.001" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_small">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_coin_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coin_count"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_small"
        android:textAppearance="@style/TextAppearance.Secondary"
        tools:text="1,000 KRW" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_buy"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_sell"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>